edit btn, section images

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <p>Подписаться на канал</p>
                 <span>↘</span>
               </button>
+              <div class="btn__text">Цена со скидкой 75%</div>
             </div>
             <div class="header__desc">Стоимость подписки <span>$29 в месяц</span></div>
           </div>
@@ -147,19 +148,19 @@
             <div class="images__item-imgs tmpl-4">
               <div class="images__item-img-block">
                 <div class="images__item-img"><img src="img/images/social/1.png" alt="" /></div>
-                <div class="images__item-img-text">YouTube</div>
+                <div class="images__item-img-text">YouTube 55,8К подписчиков</div>
               </div>
               <div class="images__item-img-block">
                 <div class="images__item-img"><img src="img/images/social/2.png" alt="" /></div>
-                <div class="images__item-img-text">Instagram</div>
+                <div class="images__item-img-text">Instagram 215К подписчиков</div>
               </div>
               <div class="images__item-img-block">
                 <div class="images__item-img"><img src="img/images/social/3.png" alt="" /></div>
-                <div class="images__item-img-text">Telegram</div>
+                <div class="images__item-img-text">Telegram 20,2К подписчиков</div>
               </div>
               <div class="images__item-img-block">
                 <div class="images__item-img"><img src="img/images/social/4.png" alt="" /></div>
-                <div class="images__item-img-text">Facebook</div>
+                <div class="images__item-img-text">Facebook 27,7К подписчиков</div>
               </div>
             </div>
           </div>
@@ -173,20 +174,20 @@
             </div>
             <div class="images__item-imgs tmpl-4">
               <div class="images__item-img-block">
-                <div class="images__item-img"><img src="img/images/social/1.png" alt="" /></div>
-                <div class="images__item-img-text">Скрин 1</div>
+                <div class="images__item-img"><img src="img/images/2/1.png" alt="" /></div>
+                <div class="images__item-img-text">424 заказа</div>
               </div>
               <div class="images__item-img-block">
-                <div class="images__item-img"><img src="img/images/social/2.png" alt="" /></div>
-                <div class="images__item-img-text">Скрин 2</div>
+                <div class="images__item-img"><img src="img/images/2/2.png" alt="" /></div>
+                <div class="images__item-img-text">498 заказов</div>
               </div>
               <div class="images__item-img-block">
-                <div class="images__item-img"><img src="img/images/social/3.png" alt="" /></div>
-                <div class="images__item-img-text">Скрин 3</div>
+                <div class="images__item-img"><img src="img/images/2/3.png" alt="" /></div>
+                <div class="images__item-img-text">1063 заказа</div>
               </div>
               <div class="images__item-img-block">
-                <div class="images__item-img"><img src="img/images/social/4.png" alt="" /></div>
-                <div class="images__item-img-text">Скрин 4</div>
+                <div class="images__item-img"><img src="img/images/2/4.png" alt="" /></div>
+                <div class="images__item-img-text">2351 заказа</div>
               </div>
             </div>
           </div>
@@ -244,18 +245,22 @@
               </div>
               <div class="images__item-title-num">05</div>
             </div>
-            <div class="images__item-imgs tmpl-3">
+            <div class="images__item-imgs tmpl-5">
               <div class="images__item-img-block">
-                <div class="images__item-img"><img src="img/images/4/1.png" alt="" /></div>
-                <div class="images__item-img-text">Скрин 1</div>
+                <div class="images__item-img"><img src="img/images/5/1.png" alt="" /></div>
+                <div class="images__item-img-text">Время: 12:28</div>
               </div>
               <div class="images__item-img-block">
-                <div class="images__item-img"><img src="img/images/4/2.png" alt="" /></div>
-                <div class="images__item-img-text">Скрин 2</div>
+                <div class="images__item-img"><img src="img/images/5/2.png" alt="" /></div>
+                <div class="images__item-img-text">Время: 12:46</div>
               </div>
               <div class="images__item-img-block">
-                <div class="images__item-img"><img src="img/images/4/3.png" alt="" /></div>
-                <div class="images__item-img-text">Скрин 3</div>
+                <div class="images__item-img"><img src="img/images/5/3.png" alt="" /></div>
+                <div class="images__item-img-text">Время: 12:47</div>
+              </div>
+              <div class="images__item-img-block">
+                <div class="images__item-img"><img src="img/images/5/4.png" alt="" /></div>
+                <div class="images__item-img-text">Время: 12:47</div>
               </div>
             </div>
           </div>
@@ -286,9 +291,10 @@
       <div class="container small">
         <div class="btn-block__wrapper">
           <div class="btn-block__btn">
-            <button class="btn modal__btn" data-modal-src="popup">
+            <button class="btn modal__btn color" data-modal-src="popup">
               Подписаться на канал <span>↘</span>
             </button>
+            <div class="btn__text">Цена со скидкой 75%</div>
           </div>
           <div class="btn-block__text">
             Вы еще сомневаетесь, нужно ли вам развивать личный бренд? Ответ очевиден: да и еще раз
@@ -603,9 +609,10 @@
 
           <div class="btn-block__wrapper">
             <div class="btn-block__btn">
-              <button class="btn modal__btn" data-modal-src="popup">
+              <button class="btn modal__btn color" data-modal-src="popup">
                 Подписаться на канал <span>↘</span>
               </button>
+              <div class="btn__text">Цена со скидкой 75%</div>
             </div>
           </div>
         </div>
@@ -624,7 +631,7 @@
           <input type="text" placeholder="Емейл" name="email" value="" class="modal__input" />
           <input type="text" placeholder="Телефон" name="tel" value="" class="modal__input" />
         </div>
-        <button class="btn">Оформить подписку <span>↘</span></button>
+        <button class="btn color">Оформить подписку <span>↘</span></button>
       </form>
     </div>
 
